--- a/app/views/web/ost/team.html.erb
+++ b/app/views/web/ost/team.html.erb
@@ -1,7 +1,12 @@
 <div class="cyna_heading">
   <%= render :partial => "/shared/web/common/navbar" %>
   <%= render :partial => "/web/ost/team/about_head" %>
-  <%= render :partial => "/web/ost/team/about_nav" %>
+  <%= render :partial => "/shared/web/common/navigation_nav" , :locals => {:content => [{ :href => "#team", :title => "Team Members", :class => "nav-item col-3 col-sm-3" },
+                                                                              {:href => "#advisors", :title => "Advisors Team", :class => "nav-item col-3 col-sm-3"},
+                                                                              {:href => "#extendedTeam", :title => "Extended Team",  :class => "nav-item col-3 col-sm-3" } ,
+                                                                              {:href => "#earlyBackers", :title => "Early Backers", :class => "nav-item col-3 col-sm-3"}]
+
+                                                                 } %>
   <%= render :partial => "/web/ost/team/team" %>
   <%= render :partial => "/web/ost/team/work_with_us" %>
   <%= render :partial => "/web/ost/team/board_directors" %>
