--- a/app/assets/stylesheets/web/ost/roadmap/Animate.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Animate.scss
@@ -67,16 +67,16 @@
 
 @keyframes qElementsAnimate{
   1%{
-    transform: translateY(20px);
+//    transform: translateY(20px);
     opacity: 0;
   }
   90%{
-    transform: translateY(0px);
+//    transform: translateY(0px);
     opacity: 0.8;
     visibility: visible;
   }
   100%{
-    transform: translateY(0);
+//    transform: translateY(0);
     opacity: 1;
     visibility: visible;
   }
