--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -312,6 +312,8 @@ body{
   .categoriesToAnimateWrapper {
     position: absolute;
     background-color: $background-color;
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
   }
 }
 
