--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li>
-              <a href="https://medium.com/ostdotcom/ost-project-roadmap-2017-2021-scaling-blockchain-economies-to-billions-of-users-7754f58112a6" target="_blank" class="nav-svg-link d-flex" title="Roadmap">
+              <a href="<%= GlobalConstant::Base.root_url %>roadmap" class="nav-svg-link d-flex" title="Roadmap">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-roadmap-icon"></use>
