--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -5,7 +5,7 @@
 } %>
 
 <div class="row">
-  <div class="col-8 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content">
       <div class="text-bold">Redeem BT for OST</div>
       <div class="status">Status: Progress</div>
@@ -20,7 +20,7 @@
 } %>
 
 <div class="row">
-  <div class="col-8 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Swap BT for ETH Beta</div>
       <div class="status">Status: Upcoming</div>
@@ -35,7 +35,7 @@
 } %>
 
 <div class="row">
-  <div class="col-8 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Swap BT for BT, ETH, BTC</div>
       <div class="status">Status: Upcoming</div>
@@ -50,7 +50,7 @@
 } %>
 
 <div class="row">
-  <div class="col-8 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Swap BT for Fiat </div>
       <div class="status">Status: Upcoming</div>
@@ -65,7 +65,7 @@
 } %>
 
 <div class="row">
-  <div class="col-9 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Additional Currency Pairings</div>
       <div class="status">Status: Upcoming</div>
@@ -80,7 +80,7 @@
 } %>
 
 <div class="row">
-  <div class="col-9 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Additional Currency Pairings</div>
       <div class="status">Status: Upcoming</div>
@@ -95,7 +95,7 @@
 } %>
 
 <div class="row">
-  <div class="col-9 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Additional Currency Pairings</div>
       <div class="status">Status: Upcoming</div>
@@ -110,7 +110,7 @@
 } %>
 
 <div class="row">
-  <div class="col-12 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
       <div class="status">Status: Upcoming</div>
@@ -125,7 +125,7 @@
 } %>
 
 <div class="row">
-  <div class="col-12 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
       <div class="status">Status: Upcoming</div>
