--- a/app/assets/stylesheets/web/ost/roadmap/Animate.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Animate.scss
@@ -101,7 +101,7 @@
   }
   to {
     stroke-dashoffset: 1000;
-    stroke: #FDEBB1;
+    stroke: #FBD764;
   }
 }
 
@@ -116,12 +116,12 @@
   }
   to {
     stroke-dashoffset: -1000;
-    stroke: #D3E3E5;
+    stroke: #A5C7D7;
   }
 }
 
 .path-vertical {
-  stroke-dasharray: 85;
+  stroke-dasharray: 100;
   stroke-dashoffset: 0;
   animation: path-vertical 2s 0.00s forwards;
 }
@@ -150,6 +150,6 @@
   }
   to {
     stroke-dashoffset: 1000;
-    stroke: #D3E3E5;
+    stroke: #A5C7D7;
   }
 }
