--- a/app/views/web/ost/events_news/_subscribe_events.erb
+++ b/app/views/web/ost/events_news/_subscribe_events.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-subscribe-events pt-5" id="subscribe">
+<section class="container-fluid container-subscribe-events pt-5" id="subscribe-events">
   <div class="row text-center">
     <div class="container col-12 col-sm-9 col-lg-8 col-xl-6 mx-auto">
       <div class="row">
